--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,7 +26,7 @@ jobs:
           mkdir ${{ github.workspace }}/deps/build
           cd ${{ github.workspace }}/deps/build
           cmake .. -DDEP_DEBUG=OFF
-          cmake --build .
+          cmake --build . -j2
 
       - name: Save Deps Cache
         id: cache-dpes-save
@@ -42,7 +42,7 @@ jobs:
           mkdir ${{ github.workspace }}/build
           cd ${{ github.workspace }}/build
           cmake .. -DCMAKE_PREFIX_PATH="${{ github.workspace }}/build/destdir"
-          cmake --build . --target install
+          cmake --build . -j2 --target install
 
       - name: Package Build
         working-directory: ${{ github.workspace }}
