--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,8 +23,8 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}
         run: |
-          mkdir ${{ github.workspace }}/deps/build
-          cd ${{ github.workspace }}/deps/build
+          mkdir ${{ github.workspace }}\deps\build
+          cd ${{ github.workspace }}\deps\build
           cmake .. -DDEP_DEBUG=OFF
           cmake --build . -j2
 
@@ -39,17 +39,17 @@ jobs:
       - name: Build Slicer
         working-directory: ${{ github.workspace }}
         run: |
-          mkdir ${{ github.workspace }}/build
-          cd ${{ github.workspace }}/build
-          cmake .. -DCMAKE_PREFIX_PATH="${{ github.workspace }}\deps\build\destdir\usr\local"
-          cmake --build . -j2 --target install
+          mkdir ${{ github.workspace }}\build
+          cd ${{ github.workspace }}\build
+          cmake .. -DSLIC3R_STATIC=1 -DCMAKE_PREFIX_PATH="${{ github.workspace }}\deps\build\destdir\usr\local"
+          cmake --build . -j2 --config Release --target install
 
       - name: Package Build
         working-directory: ${{ github.workspace }}
         run: |
             # Create zip file
-            $zipPath = "${{ github.workspace }}/build/PrusaSlicer_${{ env.date }}.zip"
-            Compress-Archive -Path "${{ github.workspace }}/build/destdir" -DestinationPath $zipPath
+            $zipPath = "${{ github.workspace }}\build\PrusaSlicer_${{ env.date }}.zip"
+            Compress-Archive -Path "${{ github.workspace }}\build\destdir" -DestinationPath $zipPath
         shell: pwsh
 
       - name: Upload Artifacts
@@ -57,3 +57,4 @@ jobs:
         with:
           name: PrusaSlicer_win64_${{ env.date }}
           path: ${{ github.workspace }}/build/PrusaSlicer_*.zip
+          retention-days: 5
