--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -36,14 +36,6 @@ jobs:
           path: ${{ github.workspace }}/deps/build/destdir
           key: prusaslicer_deps_windows_2022
 
-      - name: Upload Deps Artifacts
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        uses: actions/upload-artifact@v4
-        with:
-          name: PrusaSlicer_deps_win64_${{ env.date }}
-          path: ${{ github.workspace }}/deps/build/destdir
-          retention-days: 5
-
       - name: Build Slicer
         working-directory: ${{ github.workspace }}
         run: |
@@ -52,17 +44,17 @@ jobs:
           cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="${{ github.workspace }}\deps\build\destdir\usr\local"
           cmake --build . -j2 --config Release --target install
 
-      # - name: Package Build
-      #   working-directory: ${{ github.workspace }}
-      #   run: |
-      #       # Create zip file
-      #       $zipPath = "${{ github.workspace }}\build\PrusaSlicer_${{ env.date }}.zip"
-      #       Compress-Archive -Path "${{ github.workspace }}\build\destdir" -DestinationPath $zipPath
-      #   shell: pwsh
+      - name: Package Build
+        working-directory: ${{ github.workspace }}
+        run: |
+            # Create zip file
+            $zipPath = "${{ github.workspace }}\build\PrusaSlicer_${{ env.date }}.zip"
+            Compress-Archive -Path "${{ github.workspace }}\build\destdir" -DestinationPath $zipPath
+        shell: pwsh
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: PrusaSlicer_win64_${{ env.date }}
-          path: ${{ github.workspace }}/build/destdir
+          path: ${{ github.workspace }}/build/PrusaSlicer_${{ env.date }}.zip
           retention-days: 5
