--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
             mkdir ${{ github.workspace }}/deps/build
             cd ${{ github.workspace }}/deps/build
-            cmake .. -DDEP_DEBUG=OFF
+            cmake ..
             cmake --build .
       - name: Package Deps on Windows
         working-directory: ${{ github.workspace }}
