--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -2,6 +2,13 @@ name: windows-build
 
 on:
   workflow_dispatch: {}
+  push:
+    branches:
+      - xj-main
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
