--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -45,6 +45,10 @@ jobs:
           path: ${{ github.workspace }}/deps/build/destdir
           key: prusaslicer_deps_windows_2022
 
+      - name: Debug Deps
+        run: |
+          dir ${{ github.workspace }}\deps\build\destdir\usr\local\lib
+
       - name: Build Slicer
         working-directory: ${{ github.workspace }}
         run: |
@@ -53,17 +57,17 @@ jobs:
           cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="${{ github.workspace }}\deps\build\destdir\usr\local" -DCMAKE_INSTALL_PREFIX="${{ github.workspace }}\build\destdir"
           cmake --build . -j2 --config Release --target install
 
-      - name: Package Build
-        working-directory: ${{ github.workspace }}
-        run: |
-            # Create zip file
-            $zipPath = "${{ github.workspace }}\build\PrusaSlicer_${{ env.date }}.zip"
-            Compress-Archive -Path "${{ github.workspace }}\build\destdir" -DestinationPath $zipPath
-        shell: pwsh
+      # - name: Package Build
+      #   working-directory: ${{ github.workspace }}
+      #   run: |
+      #       # Create zip file
+      #       $zipPath = "${{ github.workspace }}\build\PrusaSlicer_${{ env.date }}`.zip"
+      #       Compress-Archive -Path "${{ github.workspace }}\build\destdir" -DestinationPath $zipPath
+      #   shell: pwsh
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: PrusaSlicer_win64_${{ env.date }}
-          path: ${{ github.workspace }}/build/PrusaSlicer_${{ env.date }}.zip
+          name: PrusaSlicer_win64_${{ github.run_number }}
+          path: ${{ github.workspace }}\build\destdir\*
           retention-days: 1
