--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -23,6 +23,9 @@ jobs:
         working-directory: ${{ github.workspace }}
         run: |
             # Create zip file
+            ls ${{ github.workspace }}
+            ls ${{ github.workspace }}/deps
+            ls ${{ github.workspace }}/deps/build
             $zipPath = "${{ github.workspace }}/deps/build/PrusaSlicer_deps_${{ env.date }}.zip"
             Compress-Archive -Path "${{ github.workspace }}/deps/build/destdir" -DestinationPath $zipPath
         shell: pwsh
