--- a/.github/workflows/deps-upload.yml
+++ b/.github/workflows/deps-upload.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
             # Create zip file
             $date = Get-Date -Format "yyyyMMdd_HHmmss"
-            $zipPath = "${{ github.workspace }}\build\PrusaSlicer_deps_$date.zip"
+            $zipPath = "${{ github.workspace }}\deps\build\PrusaSlicer_deps_$date.zip"
             Compress-Archive -Path "${{ github.workspace }}\deps\build\destdir\user\local\*" -DestinationPath $zipPath
         shell: pwsh
 
