--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -51,7 +51,7 @@ jobs:
             # Create zip file
             $date = Get-Date -Format "yyyyMMdd_HHmmss"
             $zipPath = "${{ github.workspace }}\deps\build\PrusaSlicer_deps_$date.zip"
-            Compress-Archive -Path "${{ github.workspace }}\deps\build\destdir\user\local\*" -DestinationPath $zipPath
+            Compress-Archive -Path "${{ github.workspace }}\deps\build\destdir\user\local" -DestinationPath $zipPath
         shell: pwsh
 
       - name: Upload Deps Artifacts
@@ -81,5 +81,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: PrusaSlicer_win64_${{ github.run_number }}
-          path: ${{ github.workspace }}\build\destdir\*
+          path: ${{ github.workspace }}\build\destdir
           retention-days: 1
