action: disable deps package and upload

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -45,22 +45,22 @@ jobs:
           path: ${{ github.workspace }}\deps\build\destdir
           key: prusaslicer_deps_windows_2022
 
-      - name: Package Deps
-        working-directory: ${{ github.workspace }}
-        run: |
-            # Create zip file
-            ls ${{ github.workspace }}\deps\build\destdir\usr\local
-            $date = Get-Date -Format "yyyyMMdd_HHmmss"
-            $zipPath = "${{ github.workspace }}\deps\build\PrusaSlicer_deps_$date.zip"
-            Compress-Archive -Path "${{ github.workspace }}\deps\build\destdir\usr\local" -DestinationPath $zipPath
-        shell: pwsh
+      # - name: Package Deps
+      #   working-directory: ${{ github.workspace }}
+      #   run: |
+      #       # Create zip file
+      #       ls ${{ github.workspace }}\deps\build\destdir\usr\local
+      #       $date = Get-Date -Format "yyyyMMdd_HHmmss"
+      #       $zipPath = "${{ github.workspace }}\deps\build\PrusaSlicer_deps_$date.zip"
+      #       Compress-Archive -Path "${{ github.workspace }}\deps\build\destdir\usr\local" -DestinationPath $zipPath
+      #   shell: pwsh
 
-      - name: Upload Deps Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: PrusaSlicer_deps_win64_${{ github.run_number }}
-          path: ${{ github.workspace }}\deps\build\PrusaSlicer_deps_*
-          retention-days: 1
+      # - name: Upload Deps Artifacts
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: PrusaSlicer_deps_win64_${{ github.run_number }}
+      #     path: ${{ github.workspace }}\deps\build\PrusaSlicer_deps_*
+      #     retention-days: 1
 
       - name: Build Slicer
         working-directory: ${{ github.workspace }}
