--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -68,15 +68,26 @@ jobs:
           mkdir ${{ github.workspace }}\build
           cd ${{ github.workspace }}\build
           cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="${{ github.workspace }}\deps\build\destdir\usr\local" -DCMAKE_INSTALL_PREFIX="${{ github.workspace }}\build\destdir"
-          cmake --build . -j2 --config Release --target install
+          cmake --build . -j2 --config Release --target PrusaSlicer
+          cmake --build . -j2 --config Release --target PrusaSlicer_app_gui
+          cmake --build . -j2 --config Release --target PrusaSlicer_app_console
+          cmake --build . -j2 --config Release --target PrusaSlicer_app_gcodeviewer
+          cmake --build . -j2 --config Release --target PrusaSlicerDllsCopy
 
-      # - name: Package Build
-      #   working-directory: ${{ github.workspace }}
-      #   run: |
-      #       # Create zip file
-      #       $zipPath = "${{ github.workspace }}\build\PrusaSlicer_${{ env.date }}`.zip"
-      #       Compress-Archive -Path "${{ github.workspace }}\build\destdir" -DestinationPath $zipPath
-      #   shell: pwsh
+      - name: Package Build
+        working-directory: ${{ github.workspace }}
+        run: |
+            $date = Get-Date -Format "yyyyMMdd_HHmmss"
+
+            # Copy dependency
+            # Copy-Item -force ${{ github.workspace }}\deps\build\destdir\usr\local\bin\*.dll ${{ github.workspace }}\build\destdir
+            # Move-Item -force ${{ github.workspace }}\build\destdir\bin\* ${{ github.workspace }}\build\destdir
+            # Remove-Item ${{ github.workspace }}\build\destdir\bin
+
+            # Create zip file
+            $zipPath = "${{ github.workspace }}\build\PrusaSlicer_$date.zip"
+            Compress-Archive -Path "${{ github.workspace }}\build\destdir\*" -DestinationPath $zipPath
+        shell: pwsh
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
